<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.nebulouscloud</groupId>
	<artifactId>iot-dpp-orchestrator</artifactId>
	<version>0.1.0</version>
	<packaging>jar</packaging>


	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>


	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>exn-java-connector</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.19.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-commons</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>


		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-protocols</artifactId>
			<version>2.31.2</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>


		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-mqtt-protocol</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>


		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-jms-server</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-amqp-protocol</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-core-client</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-stomp-protocol</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-jms-client</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.16.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-server</artifactId>
			<version>2.31.2</version>
			<scope>provided</scope>

		</dependency>
		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>

		
		<dependency>

			<groupId>org.apache.qpid</groupId>
			<artifactId>protonj2-client</artifactId>
			<version>1.0.0-M18</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.activemq.tooling</groupId>
			<artifactId>activemq-tooling</artifactId>
			<version>6.0.1</version>
			<scope>test</scope>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<Automatic-Module-Name>
								eu.nebulouscloud.iot_dpp_orchestrator</Automatic-Module-Name>
						</manifestEntries>
						<manifest>
							<addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>false</addDefaultImplementationEntries>
							<mainClass>
								eut.nebulouscloud.fake_ems.EMSMercabarnaGenerator</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>

				</executions>
			</plugin>
		</plugins>
	</build>

</project>